first commits to application
made changes that allowed the frontend app to communicate with the backend app

--- a/Assignment 3/rpisystem/app/src/main/app/package.json
+++ b/Assignment 3/rpisystem/app/src/main/app/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.0",
+    "yarn": "^1.22.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
