--- a/Assignment 3/rpisystem/app/src/main/resources/application.properties
+++ b/Assignment 3/rpisystem/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/rpi_rental?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = B@seball2011
+spring.datasource.password = root
 
 
 ## Hibernate Properties
