--- a/.gitignore
+++ b/.gitignore
@@ -1514,3 +1514,4 @@ Assignment 3/rpisystem/app/node_modules/yarn/bin/yarn.js
 Assignment 3/rpisystem/app/node_modules/yarn/bin/yarnpkg
 Assignment 3/rpisystem/app/node_modules/yarn/bin/yarnpkg.cmd
 Assignment 3/rpisystem/app/node_modules/yarn/lib/cli.js
+Assignment 3/rpisystem/.idea/workspace.xml
