--- a/Assignment 3/rpisystem/app/src/main/resources/application.properties
+++ b/Assignment 3/rpisystem/app/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.url = jdbc:mysql://localhost:3306/rpi_rental?useSSL=false&serv
 spring.datasource.username = root
 spring.datasource.password = root
 
+#Google Cloud Server URL
+#spring.datasource.url = jdbc:mysql://34.70.87.195:3306/rpi_rental?useSSL=false
+#spring.datasource.username =nimps1
+#spring.datasource.password =nimps1
+
+
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
