Updated Register page
Also updated database to google cloud platform

--- a/Assignment 3/rpisystem/app/src/main/resources/application.properties
+++ b/Assignment 3/rpisystem/app/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/rpi_rental?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.username = root
-spring.datasource.password = root
+# spring.datasource.url = jdbc:mysql://localhost:3306/rpi_rental?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+# spring.datasource.username = root
+# spring.datasource.password = root
 
 #Google Cloud Server URL
-#spring.datasource.url = jdbc:mysql://34.70.87.195:3306/rpi_rental?useSSL=false
-#spring.datasource.username =nimps1
-#spring.datasource.password =nimps1
+spring.datasource.url = jdbc:mysql://34.70.87.195:3306/rpi_rental?useSSL=false
+spring.datasource.username =nimps1
+spring.datasource.password =nimps1
 
 
 
