--- a/Assignment 3/rpisystem/app/src/main/resources/application.properties
+++ b/Assignment 3/rpisystem/app/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+
+hibernate.globally_quoted_identifiers = true
+hibernate.globally_quoted_identifiers_skip_column_definitions = true
+
+logging.level.org.springframework.web=DEBUG
